# adGhost

./: README.md  settings.gradle.kts
adblock-native/: Cargo.toml
adblock-native/src/: lib.rs
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/adghost/app/: AdGhostApp.kt  MainActivity.kt
app/src/main/java/com/adghost/app/ui/components/: AdBlockWebView.kt
app/src/main/java/com/adghost/app/ui/screens/: MainScreen.kt  UrlInputDialog.kt  UrlListScreen.kt
app/src/main/java/com/adghost/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/adghost/app/util/: NativeAdBlockEngine.kt  PreferencesManager.kt
app/src/main/java/com/adghost/app/webview/: AdBlockWebChromeClient.kt  AdBlockWebViewClient.kt  JsInjector.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
