[package]
name = "adghost-adblock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
adblock = { path = "../adblock-rust-master", default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }
jni = { version = "0.21", features = ["invocation"] }
once_cell = "1.19"

[profile.release]
lto = true
opt-level = "s"
strip = true
